--- a/hs/housing-search/src/Pages/HomePage.css
+++ b/hs/housing-search/src/Pages/HomePage.css
@@ -1,14 +1,21 @@
+.home-page {
+  grid-template-rows: 3;
+  grid-template-columns: 2;
+}
 .header-name {
   background-image: linear-gradient(45deg, yellow, red);
   text-align: center;
   background-size: 100%;
   background-clip: text;
   color: transparent;
+  grid-column: 2;
+  grid-row: 1;
 }
 
-.logo {
-  width: 50px;
-  height: 50px;
+.search-block {
+  width: 100%;
+  height: 50%;
+  grid-row: 1;
 }
 
 .search-form {
@@ -36,7 +43,7 @@
 
 .search-btn {
   background-color: coral;
-  background-image: url("./icons/search-icon.png");
+  background-image: url("../Components/SearchBar/icons/search-icon.png");
   background-size: 50px 50px;
   background-position: center;
   background-position-y: top;
@@ -47,4 +54,51 @@
   height: 50px;
   width: 75px;
   vertical-align: middle;
+}
+
+.search-btn:hover {
+  background-color: rgb(253, 102, 47);
+  background-size: 55px 55px;
+}
+
+.map {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  grid-row: 2;
+  grid-column: 1;
+}
+
+.data-table {
+  width: 100%;
+  height: 25%;
+  grid-row: 2;
+  grid-column: 2;
+}
+
+.selector-container {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  width: 200px;
+}
+
+.range-selector {
+  color: white;
+  font-size: large;
+  text-align: center;
+  background-color: coral;
+  width: 200px;
+  height: 30px;
+  outline: none;
+  border-color: transparent;
+}
+
+.range-selector:hover {
+  background-color: rgb(240, 100, 49);
+}
+
+.range-option {
+  background-color: coral;
+  border-color: transparent;
 }
