--- a/hs/housing-search/src/Pages/HomePage.css
+++ b/hs/housing-search/src/Pages/HomePage.css
@@ -1,21 +1,42 @@
-.home-page {
-  grid-template-rows: 3;
-  grid-template-columns: 2;
+body {
+  margin: 0px;
 }
-.header-name {
-  background-image: linear-gradient(45deg, yellow, red);
+
+.header {
   text-align: center;
-  background-size: 100%;
-  background-clip: text;
-  color: transparent;
-  grid-column: 2;
-  grid-row: 1;
+  height: 10%;
+}
+
+.header-name {
+  display: inline-block;
+  width: calc(60vw);
+  color: white;
+  font-family: "Righteous", serif;
+  font-size: 5em;
+  text-shadow: 0.03em 0.03em 0 #cbc3e3;
+  margin: 10px;
+}
+@import url(https://fonts.googleapis.com/css?family=Righteous);
+
+.caption {
+  font-family: "Righteous", serif;
+  background-color: rgb(196, 181, 253);
+  text-shadow: 0.03em 0.03em 0 #cbc3e3;
+  padding-left: 10px;
+  font-size: 2.5em;
+  color: white;
+  text-align: center;
+}
+
+.radar-container {
+  padding-top: 10px;
 }
 
 .search-block {
   width: 100%;
   height: 50%;
   grid-row: 1;
+  background-color: rgb(196, 181, 253);
 }
 
 .search-form {
@@ -30,7 +51,8 @@
 
 .search-bar {
   text-align: center;
-  font-size: 2vw;
+  font-size: 1vw;
+  font-family: "Righteous", serif;
   font-weight: bolder;
   border-radius: 30px;
   border-top-color: coral;
@@ -39,14 +61,14 @@
   width: 720px;
   vertical-align: middle;
   outline: none;
+  position: relative;
 }
 
 .search-btn {
-  background-color: coral;
+  background-color: rgb(196, 181, 253);
   background-image: url("../Components/SearchBar/icons/search-icon.png");
-  background-size: 50px 50px;
+  background-size: 30px 30px;
   background-position: center;
-  background-position-y: top;
   background-repeat: no-repeat;
   border-radius: 30px;
   margin: 10px;
@@ -54,14 +76,17 @@
   height: 50px;
   width: 75px;
   vertical-align: middle;
+  outline: none;
 }
 
 .search-btn:hover {
-  background-color: rgb(253, 102, 47);
-  background-size: 55px 55px;
+  background-color: rgb(145, 117, 255);
+  background-size: 40px 40px;
 }
 
 .map {
+  margin-top: 8px;
+  margin-bottom: 8px;
   position: relative;
   width: 100%;
   height: 400px;
@@ -71,23 +96,24 @@
 
 .data-table {
   width: 100%;
-  height: 25%;
-  grid-row: 2;
-  grid-column: 2;
+  display: flex;
+  overflow-x: scroll;
+  padding: 20px;
 }
 
 .selector-container {
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  width: 200px;
+  width: 500px;
 }
 
 .range-selector {
-  color: white;
+  margin-left: 0;
+  margin-right: 10%;
   font-size: large;
-  text-align: center;
-  background-color: coral;
+  font-family: "Righteous", serif;
+  background-image: linear-gradient(45deg, rgb(196, 181, 253), pink);
   width: 200px;
   height: 30px;
   outline: none;
@@ -95,10 +121,43 @@
 }
 
 .range-selector:hover {
-  background-color: rgb(240, 100, 49);
+  background-image: linear-gradient(
+    45deg,
+    rgb(196, 181, 253),
+    rgb(145, 117, 255)
+  );
 }
 
 .range-option {
-  background-color: coral;
+  font-family: "Righteous", serif;
+  background-color: rgb(226, 219, 255);
   border-color: transparent;
+}
+
+.type-selector {
+  background-image: linear-gradient(45deg, rgb(196, 181, 253), pink);
+  width: 200px;
+  height: 30px;
+  outline: none;
+  border-color: transparent;
+  font-size: large;
+  font-family: "Righteous", serif;
+}
+
+.type-selector:hover {
+  background-image: linear-gradient(
+    45deg,
+    rgb(196, 181, 253),
+    rgb(145, 117, 255)
+  );
+}
+
+.type-option {
+  font-family: "Righteous", serif;
+  background-color: rgb(226, 219, 255);
+  border-color: transparent;
+}
+
+.top-section {
+  background-color: rgb(196, 181, 253);
 }
